# PhD_ui

./: CLAUDE.md  README.md  main.py  pyproject.toml
src/phd_ui/: __init__.py
src/phd_ui/_assets/: _renaming.xlsx  figsize.json  renaming.json
src/phd_ui/colors/: __init__.py  base.py  cmaps.py  manipulation.py
src/phd_ui/fonts/: __init__.py  fonts.py
src/phd_ui/plotting/: __init__.py  conversion.py  core.py  draw.py  export.py  figsize.py  params.py  params_double.py  params_single.py
src/phd_ui/renaming/: __init__.py  renaming.py
tests/: test_colors.py  test_init.py  test_renaming.py
